--- a/services/community-service.yaml
+++ b/services/community-service.yaml
@@ -50,7 +50,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       requestBody:
         required: true
@@ -79,7 +79,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       responses:
         '200':
@@ -100,7 +100,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -123,7 +123,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -150,7 +150,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -176,7 +176,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -203,7 +203,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -235,7 +235,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -272,7 +272,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       requestBody:
         required: true
@@ -301,7 +301,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       responses:
         '200':
@@ -322,7 +322,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -345,7 +345,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -371,7 +371,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -398,7 +398,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -430,7 +430,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -467,7 +467,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: query
@@ -515,7 +515,7 @@ paths:
         - content
       security: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: query
@@ -562,7 +562,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       requestBody:
         required: true
@@ -590,7 +590,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: query
@@ -630,7 +630,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -656,7 +656,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -688,7 +688,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -711,7 +711,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -746,7 +746,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       requestBody:
         required: true
@@ -774,7 +774,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: query
@@ -810,7 +810,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -837,7 +837,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -866,7 +866,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       requestBody:
         required: true
@@ -894,7 +894,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: query
@@ -934,7 +934,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -961,7 +961,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       requestBody:
         required: true
@@ -989,7 +989,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: query
@@ -1025,7 +1025,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: query
@@ -1065,7 +1065,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -1091,7 +1091,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -1125,7 +1125,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -1150,7 +1150,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -1179,7 +1179,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -1214,7 +1214,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -1251,7 +1251,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -1281,7 +1281,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: query
@@ -1313,7 +1313,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -1340,7 +1340,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
@@ -1374,7 +1374,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://community-service-ee3nwblsmq-uc.a.run.app
+        address: https://community-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       parameters:
         - in: path
