--- a/services/wishlist-service.yaml
+++ b/services/wishlist-service.yaml
@@ -23,7 +23,7 @@ paths:
         - wishlist
       operationId: wishlistHeartbeat
       x-google-backend:
-        address: https://wishlist-service-ee3nwblsmq-uc.a.run.app
+        address: https://wishlist-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       responses:
         "200":
@@ -68,7 +68,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://wishlist-service-ee3nwblsmq-uc.a.run.app
+        address: https://wishlist-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       responses:
         "200":
@@ -110,7 +110,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://wishlist-service-ee3nwblsmq-uc.a.run.app
+        address: https://wishlist-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       requestBody:
         content:
@@ -159,7 +159,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://wishlist-service-ee3nwblsmq-uc.a.run.app
+        address: https://wishlist-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       requestBody:
         content:
@@ -208,7 +208,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://wishlist-service-ee3nwblsmq-uc.a.run.app
+        address: https://wishlist-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       requestBody:
         content:
@@ -258,7 +258,7 @@ paths:
       security:
         - jwtAuth: []
       x-google-backend:
-        address: https://wishlist-service-ee3nwblsmq-uc.a.run.app
+        address: https://wishlist-service-981292602655.us-central1.run.app
         path_translation: APPEND_PATH_TO_ADDRESS
       requestBody:
         content:
